include_directories(${TEST_SOURCE_DIR}/include)
add_executable(LoadAndQuery test1.cpp)
add_executable(LoadAsMMAP test2.cpp)
add_executable(MMAPComp test3.cpp)
target_link_libraries(LoadAndQuery cmsbwt)
target_link_libraries(LoadAsMMAP cmsbwt)
target_link_libraries(MMAPComp cmsbwt)
add_test(NAME LoadAndQuery COMMAND LoadAndQuery $ENV{TEST_ARGS})
add_test(NAME LoadAsMMAP COMMAND LoadAsMMAP $ENV{TEST_ARGS})
add_test(NAME MMAPComp COMMAND MMAPComp $ENV{TEST_ARGS})
